[package]
name = "grpc_canary"
version = "0.1.0"
edition = "2021"
authors = ["Tom Watson <tom@fl0.com>"]
license-file = "LICENSE"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
tokio = { version = "1.33.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "signal",
    "tracing",
    "sync",
] }
tonic = "0.10.2"
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
serde = { version = "1.0.188", features = ["derive"] }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
    "local-time",
    "registry",
    "parking_lot",
] }
tokio-stream = "0.1.14"
time = { version = "0.3.29", features = ["formatting", "serde"] }
nanoid = "0.4.0"
tokio-util = "0.7.9"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
lto = "thin"
